tests/sksl/errors/SwizzleDuplicateOutput.sksl
void main() {
    float4 test = float4(1);
    test.xyyz = float4(1);
}
